<resources>
    <string name="app_name">SpaceToon</string>
    <string name="sign_in">Sign in</string>
    <string name="forget_your_password">Forget your password?</string>
    <string name="welcome_back">Welcome Back</string>
    <string name="password">Password</string>
    <string name="logo_spactoon">logo spactoon</string>
    <string name="email">Email</string>
    <string name="skip">Skip</string>
    <string name="or">OR</string>
    <string name="sign_in_with_twitter">sign in with twitter</string>
    <string name="sign_in_with_facebook">sign in with facebook</string>
    <string name="sign_in_with_google">sign in with google</string>
    <string name="don_t_have_an_account">Don\'t have an account? </string>
    <string name="create_a_new_account"> Create a new account</string>
    <string name="dark_theme">Dark Theme</string>
    <string name="using_time">Using Time</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="icon_arrow">icon arrow</string>
    <string name="title">Games</string>
    <string name="card_game_title">Guess The Anime</string>
    <string name="guess_the_character">Guess The Character</string>
    <string name="s_char">S</string>
    <string name="m_char">m</string>
    <string name="u_char">u</string>
    <string name="r_char">r</string>
    <string name="f_char">f</string>
    <string name="t_char">t</string>
    <string name="z_char">z</string>
    <string name="l_char">l</string>
    <string name="x_char">x</string>
    <string name="a_char">a</string>
    <string name="i_char">i</string>
    <string name="smurf_image">smurf image</string>
    <string name="next_word">Next</string>
    <string name="music">Music</string>
    <string name="favorite_artists">Favorite Artists</string>
    <string name="rasha_rizk">Rasha Rizk</string>
    <string name="tarek_alarabi">Tarek Al-Arabi</string>
    <string name="muhammad_tarek">Muhammad Tarek</string>
    <string name="dima_tarek">Dima Tarek</string>
    <string name="asim_sugar">Asim Sugar</string>
</resources>