<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:scrollbars="none"
    android:background="@color/background"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".LoginActivity">

        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:background="@color/background"
            android:gravity="center_vertical"
            android:padding="@dimen/spacing_large"
            app:elevation="@dimen/zero"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/text_skip"
                style="@style/normalMediumTextStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:clickable="true"
                android:focusable="true"
                android:text="@string/skip"
                android:layout_marginHorizontal="@dimen/spacing_small"
                android:textColor="@color/text_tertiary_38" />

        </com.google.android.material.appbar.AppBarLayout>


        <ImageView
            android:id="@+id/logo_app"
            android:layout_width="@dimen/logo_width"
            android:layout_height="@dimen/logo_height"
            android:layout_marginTop="@dimen/spacing_x_large"
            android:background="@drawable/logo_spacetoon"
            android:contentDescription="@string/logo_spactoon"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/appbar" />

        <Button
            android:id="@+id/btn_sign_in"
            style="@style/normalSemiBoldTextStyle"
            android:layout_width="match_parent"
            android:layout_height="@dimen/large_button_height"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_hug"
            android:background="@drawable/background_button"
            android:text="@string/sign_in"
            android:textAllCaps="false"
            android:textColor="@color/on_primary"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_forget_password" />

        <TextView
            android:id="@+id/tv_forget_password"
            style="@style/titleSemiBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:text="@string/forget_your_password"
            android:textColor="@color/text_secondary_60"
            android:textSize="@dimen/font_size_caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/input_password" />

        <TextView
            android:id="@+id/text_welcome"
            style="@style/titleSemiBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_hug"
            android:text="@string/welcome_back"
            android:textColor="@color/text_secondary_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/logo_app" />

        <EditText
            android:id="@+id/input_email"
            style="@style/normalTextStyle.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:autofillHints="emailAddress"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_welcome" />

        <EditText
            android:id="@+id/input_password"
            style="@style/normalTextStyle.input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/spacing_large"
            android:layout_marginTop="@dimen/spacing_large"
            android:autofillHints="password"
            android:hint="@string/password"
            android:inputType="textPassword"
            app:layout_constraintEnd_toEndOf="@+id/input_email"
            app:layout_constraintStart_toStartOf="@+id/input_email"
            app:layout_constraintTop_toBottomOf="@+id/input_email" />

        <TextView
            android:id="@+id/text_or"
            style="@style/captionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_hug"
            android:text="@string/or"
            android:textColor="@color/text_tertiary_38"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btn_sign_in" />

        <View
            android:id="@+id/divider"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="@dimen/spacing_large"
            android:layout_marginEnd="@dimen/spacing_small"
            android:background="@color/text_variant_10"
            app:layout_constraintBottom_toBottomOf="@+id/text_or"
            app:layout_constraintEnd_toStartOf="@+id/text_or"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/text_or" />

        <View
            android:id="@+id/divider2"
            android:layout_width="@dimen/divider_width"
            android:layout_height="@dimen/divider_height"
            android:layout_marginStart="@dimen/spacing_small"
            android:layout_marginEnd="@dimen/spacing_large"
            android:background="@color/text_variant_10"
            app:layout_constraintBottom_toBottomOf="@id/text_or"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@id/text_or"
            app:layout_constraintTop_toTopOf="@id/text_or" />

        <ImageButton
            android:id="@+id/btn_twitter_login"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_marginTop="@dimen/spacing_hug"
            android:background="@color/background"
            android:contentDescription="@string/sign_in_with_twitter"
            android:src="@drawable/icon_twitter"
            app:layout_constraintEnd_toEndOf="@+id/text_or"
            app:layout_constraintStart_toStartOf="@+id/text_or"
            app:layout_constraintTop_toBottomOf="@id/text_or" />

        <ImageButton
            android:id="@+id/btn_facebook_login"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_marginStart="@dimen/spacing_x_large"
            android:background="@color/background"
            android:contentDescription="@string/sign_in_with_facebook"
            android:src="@drawable/icon_facebook"
            app:layout_constraintStart_toEndOf="@id/btn_twitter_login"
            app:layout_constraintTop_toTopOf="@id/btn_twitter_login" />

        <ImageButton
            android:id="@+id/btn_google_login"
            android:layout_width="@dimen/medium_icon_size"
            android:layout_height="@dimen/medium_icon_size"
            android:layout_marginEnd="@dimen/spacing_x_large"
            android:background="@color/background"
            android:contentDescription="@string/sign_in_with_google"
            android:src="@drawable/icon_google"
            app:layout_constraintEnd_toStartOf="@id/btn_twitter_login"
            app:layout_constraintTop_toTopOf="@id/btn_twitter_login" />


        <TextView
            android:id="@+id/text_do_not_have_account"
            style="@style/captionTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="@dimen/spacing_hug"
            android:text="@string/don_t_have_an_account"
            android:textColor="@color/text_tertiary_38"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/text_create_account"
            app:layout_constraintHorizontal_chainStyle="packed"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_twitter_login" />

        <TextView
            android:id="@+id/text_create_account"
            style="@style/captionSemiBoldTextStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingHorizontal="@dimen/spacing"
            android:text="@string/create_a_new_account"
            android:textColor="@color/text_secondary_60"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toEndOf="@+id/text_do_not_have_account"
            app:layout_constraintTop_toTopOf="@+id/text_do_not_have_account" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>
