<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/background">

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/avatar_user"
        android:layout_width="@dimen/size_avatar"
        android:layout_height="@dimen/size_avatar"
        android:layout_marginTop="@dimen/spacing_x_hug"
        android:background="@drawable/border_image_profile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/btn_edite_profile"
        style="@style/captionSemiBoldTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/edit_profile_button_rounded"
        android:clickable="true"
        android:focusable="true"
        android:paddingHorizontal="@dimen/spacing_hug"
        android:paddingVertical="@dimen/spacing_small"
        android:text="@string/edit_profile"
        android:textAllCaps="false"
        android:textColor="@color/on_primary"
        app:layout_constraintEnd_toEndOf="@+id/avatar_user"
        app:layout_constraintStart_toStartOf="@+id/avatar_user"
        app:layout_constraintTop_toBottomOf="@+id/avatar_user" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_dark_theme"
        style="@style/normalTextStyle.profileTextView"
        android:layout_width="match_parent"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginHorizontal="@dimen/spacing_large"
        android:layout_marginTop="@dimen/spacing_x_large"
        android:background="@drawable/large_textview"
        android:text="@string/dark_theme"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btn_edite_profile" />

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/switch_theme"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:paddingEnd="@dimen/spacing_small"
        android:thumb="@drawable/thumb"
        app:layout_constraintBottom_toBottomOf="@+id/text_dark_theme"
        app:layout_constraintEnd_toEndOf="@+id/text_dark_theme"
        app:layout_constraintTop_toTopOf="@+id/text_dark_theme"
        app:track="@drawable/track"
        tools:ignore="RtlSymmetry" />

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/text_using_timer"
        style="@style/normalTextStyle.profileTextView"
        android:layout_width="@dimen/zero"
        android:layout_height="@dimen/large_button_height"
        android:layout_marginTop="@dimen/spacing_large"
        android:background="@drawable/large_textview"
        android:text="@string/using_time"
        app:layout_constraintEnd_toEndOf="@+id/text_dark_theme"
        app:layout_constraintStart_toStartOf="@+id/text_dark_theme"
        app:layout_constraintTop_toBottomOf="@+id/text_dark_theme" />

    <ImageView
        android:id="@+id/arrowButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/spacing_large"
        android:contentDescription="@string/icon_arrow"
        android:src="@drawable/alt_arrow_right"
        app:layout_constraintBottom_toBottomOf="@+id/text_using_timer"
        app:layout_constraintEnd_toEndOf="@+id/text_using_timer"
        app:layout_constraintTop_toTopOf="@+id/text_using_timer" />

</androidx.constraintlayout.widget.ConstraintLayout>